2.0.10.dev0
 * #942: Factor reference material out of the documentation how-to guides. This means there's now a
   whole reference section in the docs! Check it out: https://torsion.org/borgmatic/
 * #1150: Fix for a runtime directory error when the "create" action is used with the "--log-json"
   flag.
 * #1161: Fix a traceback (TypeError) in the "check" action with Python 3.14.
 * Add documentation search.
 * Change the URL of the local documentation development server to be more like the production URL.

2.0.9
 * #1105: More accurately collect Btrfs subvolumes to snapshot. As part of this, the Btrfs hook no
   longer uses "findmnt" and the "findmnt_command" option is deprecated.
 * #1123: Add loading of systemd credentials even when running borgmatic outside of a systemd
   service.
 * #1149: Add support for Python 3.14.
 * #1149: Include automated tests in the source dist tarball uploaded to PyPI.
 * #1151: Fix snapshotting in the ZFS, Btrfs, and LVM hooks to play nicely with the Borg 1.4+
   "slashdot" hack within source directory paths.
 * #1152: Fix a regression in the Loki monitoring hook in which log messages weren't sending.
 * #1156: Fix snapshotting in the ZFS, Btrfs, and LVM hooks to snapshot both parent and child
   volumes/filesystems instead of just the parent. As part of this fix, borgmatic no longer
   deduplicates patterns except for those containing the borgmatic runtime directory.
 * Fix a traceback (TypeError) regression in the "spot" check when the "local_path" option isn't
   set.

2.0.8
 * #1114: Document systemd configuration changes for the ZFS filesystem hook.
 * #1116: Add dumping of database containers via their container names, handy for backing up
   database containers from the host. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/backup-your-databases/#database-client-on-the-host
 * #1116: Add optional database labels to make it easier to find your dumps within a Borg archive.